feat: first test with non modularized application