@@ -1,188 +1,35 @@
 // set JAVA_HOME=C:\Program Files\Java\jdk-11.0.5+10
 
 plugins {
-    id 'java'
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.8'
-    id 'org.beryx.jlink' version '2.16.4'
-    id 'org.unbroken-dome.xjc' version '1.4.2'
+    id 'org.beryx.runtime' version '1.8.0'
 }
 
-dependencies {
-	// implementation 'org.controlsfx:controlsfx:8.40.12'
-	// https://github.com/controlsfx/controlsfx
-	// implementation 'org.controlsfx:controlsfx:9.0.1-SNAPSHOT'
-	// implementation 'org.controlsfx:controlsfx:11.0.0-RC2'
-    implementation ('org.controlsfx:controlsfx:11.0.0-RC2') {
-        exclude group: 'org.openjfx', module: '*'
-    }
-
-	implementation 'org.xmlunit:xmlunit-core:2.6.3'
-
-    implementation 'javax.xml.bind:jaxb-api:2.3.1'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-    // implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
-    // implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
-
-    implementation 'net.sf.jasperreports:jasperreports:6.10.0'
-    implementation 'net.sf.jasperreports:jasperreports-fonts:6.10.0'
-    implementation 'commons-beanutils:commons-beanutils:1.9.3'
-    implementation 'commons-digester:commons-digester:2.1'
-    implementation 'commons-logging:commons-logging:1.1.1'
-    implementation 'org.apache.commons:commons-collections4:4.2'
-    /*
-    implementation ('org.hibernate:hibernate-core:5.4.1.Final') {
-        exclude group: 'javax.transaction', module: 'jta'
-    }*/
-    implementation ('com.lowagie:itext:2.1.7') {
-        exclude group: 'org.bouncycastle', module: 'bcmail-jdk15on'
-        exclude group: 'org.bouncycastle', module: 'bcpkix-jdk15on'
-    }
-    /* implementation 'com.adobe.xmp:xmpcore:5.1.3' */
-    implementation ('org.jfree:jcommon:1.0.23') {
-        exclude group: 'gnujaxp', module: 'gnujaxp'
-    }
-    implementation ('org.jfree:jfreechart:1.0.19') {
-        exclude group: 'gnujaxp', module: 'gnujaxp'
-    }
-    /* implementation 'org.apache.poi:poi:4.0.1'
-    // implementation 'org.apache.poi:poi-ooxml:4.0.1' // see below
-    // javax.servlet provided
-    implementation 'xalan:xalan:2.7.2'
-    // .. more
-    */
-    implementation ('org.codehaus.castor:castor-xml:1.4.1') {
-        exclude group: 'org.springframework', module: 'spring-context'
-    }
-    /* implementation 'javax.xml.soap:javax.xml.soap-api:1.4.0'
-    implementation ('javax.xml.soap:saaj-api:1.3') {
-        exclude group: 'javax.activation', module: 'activation'
-    }*/
-    // implementation 'com.sun.xml.ws:jaxws-ri:2.3.2' // SOAP missing
-
-    implementation 'org.apache.logging.log4j:log4j-core:2.8.2'
-    implementation 'org.apache.logging.log4j:log4j-jcl:2.8.2'
-    implementation group:"com.fasterxml.jackson.core", name:"jackson-core", version:'2.9.9'
-    implementation group:"com.fasterxml.jackson.core", name:"jackson-databind", version:'2.9.9'
-    implementation group:"com.fasterxml.jackson.core", name:"jackson-annotations", version:'2.9.9'
-    // implementation 'org.codehaus.groovy:groovy-all:2.4.16'
-
-    implementation 'org.apache.poi:poi-ooxml:4.0.1'
-
-    implementation 'com.udojava:EvalEx:2.4'
-
-    implementation 'com.ibm.icu:icu4j:65.1'
-
-	// test dependencies
-	testCompile group: 'junit', name: 'junit', version: '4.12'
-}
 
 repositories {
     mavenCentral()
-	// maven {url 'https://oss.sonatype.org/content/repositories/snapshots'}     // This is added for snapshot
 }
 
 javafx {
     version = '13.0.1'
-    modules = ['javafx.controls', 'javafx.swing', 'javafx.fxml', 'javafx.media', 'javafx.web']
+    modules = ['javafx.controls']
 }
 
-run {
-    if (osdetector.os == 'windows') {
-        // Temporal fix for Eclipse with JDK 1.8 and Windows
-        systemProperty "java.library.path", "C:tmp"
-    }
-}
-
-xjcGenerate {
-    source = fileTree('src/main/resources') { include '*.xsd' }
-}
-
-version = '19.11.27'
+version = '19.12.04'
 def company = 'My Company'
 
-mainClassName = "com.example/com.example.HelloFX"
+mainClassName = "com.example.hellofx.Launcher"
 
 application {
-    applicationDefaultJvmArgs =  [
-            "--add-opens=javafx.base/com.sun.javafx.runtime=org.controlsfx.controls",
-            "--add-opens=javafx.base/com.sun.javafx.collections=org.controlsfx.controls",
-			"--add-opens=javafx.base/com.sun.javafx.event=org.controlsfx.controls",
-            // "--add-opens=javafx.base/com.sun.javafx.event=ALL-UNNAMED",
-            "--add-opens=javafx.graphics/com.sun.javafx.css=org.controlsfx.controls",
-			// "--add-opens=javafx.graphics/com.sun.javafx.css=ALL-UNNAMED",
-            "--add-opens=javafx.graphics/com.sun.javafx.scene=org.controlsfx.controls",
-            "--add-opens=javafx.graphics/com.sun.javafx.scene.traversal=org.controlsfx.controls",
-            "--add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls",
-            "--add-opens=javafx.controls/com.sun.javafx.scene.control=org.controlsfx.controls",
-            "--add-opens=javafx.controls/com.sun.javafx.scene.control.behavior=org.controlsfx.controls",
-            "--add-opens=javafx.controls/javafx.scene.control.skin=org.controlsfx.controls",
-            // Jasperreports (XML parsing or use javax.xml.soap as in JR pom ?)
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.impl=ALL-UNNAMED",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.impl=com.example",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.impl=jasperreports",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=ALL-UNNAMED",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=com.example",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.parsers=jasperreports",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=ALL-UNNAMED",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=com.example",
-            "--add-opens=java.xml/com.sun.org.apache.xerces.internal.jaxp=jasperreports",
-            // Jasperreports (allow bean reflection) / Groovy
-            /*
-            "--add-opens=java.base/java.lang=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang=com.example",
-            "--add-opens=java.base/java.lang=jasperreports",
-            "--add-opens=java.base/java.lang=commons.beanutils",
-            "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang.invoke=com.example",
-            "--add-opens=java.base/java.lang.invoke=jasperreports",
-            "--add-opens=java.base/java.lang.invoke=commons.beanutils",
-            "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-            "--add-opens=java.base/java.lang.reflect=com.example",
-            "--add-opens=java.base/java.lang.reflect=jasperreports",
-            "--add-opens=java.base/java.lang.reflect=commons.beanutils", */
-    ]
+    // mainClassName = "com.example.hellofx.Launcher"
+    applicationName = 'hellofx'
 }
 
-jlink {
-    // https://github.com/beryx/badass-jlink-plugin/issues/59 -> gradlew suggestMergedModuleInfo
-    /*mergedModule {
-        requires "java.xml"
-    }*/
-    mergedModule {
-        // requires 'java.xml.bind';
-        requires 'java.logging'
-        requires 'java.xml'
-        requires 'java.desktop'
-        requires 'java.datatransfer'
-        // needed?
-        requires 'java.xml.crypto'
-        requires 'java.security.jgss'
-        requires 'jdk.javadoc'
-        // Jasperreports
-        requires 'java.sql'
-        requires 'java.sql.rowset'
-        requires 'java.scripting'
-        requires 'java.management'
-        // requires 'java.xml.bind'
-        // uses 'javax.annotation.processing.Processor'
-        // uses 'java.nio.file.spi.FileSystemProvider'
-        // requires 'jasperreports.fonts';
-        // requires 'java.xml.soap'
-    }
-
-    // runtime image produced by jlink: build\image\bin\hello-fx.bat
+runtime {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher {
-        // name = 'sliding-puzzle'
-        // name = 'com.example/com.example.HelloFX'
-        name = 'hello-fx'
-        jvmArgs = [
-                "--add-exports", "javafx.base/com.sun.javafx.event=org.controlsfx.controls"
-        ]
-        // jvmArgs = ['-Dfxgl.sliding.puzzle.dummy=nothing', '-Dfxgl.sliding.puzzle.title=something']
-    }
     jpackage {
+        imageName = "hello-fx"
         // Set the environment property BADASS_JLINK_JPACKAGE_HOME or explicitly configure the below property
         def os = org.gradle.internal.os.OperatingSystem.current()
         if(os.macOsX) {
@@ -209,6 +56,7 @@ jlink {
             ]
         } else if(os.windows) {
             imageOptions = ['--icon', 'src/main/deploy/package/windows/hello.ico']
+            installerType = 'msi'
             installerOptions += [
                     '--win-per-user-install',
                     // , '--win-dir-chooser'
@@ -220,6 +68,3 @@ jlink {
         }
     }
 }
-
-
-apply plugin : 'java'
